--- a/Assignment 4/web422-a4/src/app/app.component.html
+++ b/Assignment 4/web422-a4/src/app/app.component.html
@@ -67,9 +67,7 @@
 
     <mat-sidenav-content class="sidenav-content">
       <!-- Main content -->
-      <app-about></app-about>
-      <app-not-found></app-not-found>
-      <app-new-releases></app-new-releases>
+      <router-outlet></router-outlet>
       <!-- ------------ -->
 
       <div class="bottom-spacer"></div>
