--- a/Assignment 4/web422-a4/src/app/app.component.html
+++ b/Assignment 4/web422-a4/src/app/app.component.html
@@ -5,7 +5,7 @@
       <mat-icon>menu</mat-icon>
     </button>
 
-    <a class="navbar-brand" matTooltip="Home">
+    <a class="navbar-brand" matTooltip="Home" [routerLink]="['/newReleases']">
       <h1>Seneca Music</h1>
     </a>
 
@@ -46,7 +46,7 @@
           </mat-form-field>
         </div>
 
-        <a mat-list-item>
+        <a mat-list-item [routerLink]="['/newReleases']">
           <mat-icon mat-list-icon> library_music </mat-icon>
           <p mat-line>New Releases</p>
         </a>
@@ -58,7 +58,7 @@
 
         <mat-divider></mat-divider>
 
-        <a id="push-bottom" mat-list-item>
+        <a id="push-bottom" mat-list-item [routerLink]="['/about']">
           <mat-icon mat-list-icon> info_outline </mat-icon>
           <p mat-line>About</p>
         </a>
