--- a/Assignment 4/web422-a4/src/app/new-releases/new-releases.component.html
+++ b/Assignment 4/web422-a4/src/app/new-releases/new-releases.component.html
@@ -43,6 +43,7 @@
                 >hearing</mat-icon
               >
             </a>
+            <!-- <img src="../../assets/spotify-icon-png-15398.png" width="20px" /> -->
           </mat-card-content>
         </mat-card>
       </div>
