--- a/Assignment 4/web422-a4/src/styles.css
+++ b/Assignment 4/web422-a4/src/styles.css
@@ -1,12 +1,18 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+* {
+  font-family: Montserrat, sans-serif;
+}
 
+html, body { height: 100%; }
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Montserrat, sans-serif !important;
   font-size: 14px;
+}
+
+a {
+  text-decoration: none;
 }
 
 .mat-list-item,
@@ -108,4 +114,12 @@ mat-sidenav {
 
 .mat-sidenav-content .mat-list-item {
   height: auto !important;
+}
+
+.mat-card-title {
+  font-weight: 700;
+}
+
+.green-icon {
+  color: green;
 }
