--- a/Assignment 4/web422-a4/src/app/artist-discography/artist-discography.component.html
+++ b/Assignment 4/web422-a4/src/app/artist-discography/artist-discography.component.html
@@ -1,31 +1,47 @@
+<div>
+  <h1>{{ artist.name }}</h1>
+  <p>
+    Full discography for {{ artist.name }}<br />
+    Click the album cover for more information.
+  </p>
+  <br />
+</div>
+
 <mat-card
   [style.background]="
-    'url(' + 'https://via.placeholder.com/640' + ') no-repeat center center'
+    'url(' + artist.images[0].url + ') no-repeat center center'
   "
   [style.background-size]="'cover'"
-  [style.height]="'450px'"
+  [style.height]="'550px'"
 >
 </mat-card>
 <br /><br />
-<h1>Full Discography</h1>
+<h2>Full Discography</h2>
 
 <div fxLayout="row wrap" fxLayout.xs="column">
   <!-- Single "Responsive" Card-->
-  <div fxFlex [style.margin]="'20px'">
-    <mat-card [style.min-width]="'200px'">
+  <div
+    fxFlex
+    [style.margin]="'20px'"
+    *ngFor="let album of albums"
+    fxLayoutAlign="start start"
+  >
+    <mat-card [style.min-width]="'200px'" fxFlexAlign="stretch">
       <mat-card-header>
-        <mat-card-title>This is a Sample Album Title</mat-card-title>
+        <mat-card-title>{{ album.name }}</mat-card-title>
         <mat-card-subtitle>Album Title</mat-card-subtitle>
       </mat-card-header>
 
-      <img
-        mat-card-image
-        class="album-cover"
-        src="https://via.placeholder.com/640"
-        alt="album art"
-      />
-      <strong>Release Date: </strong>2021/02/12<br />
-      <strong>Tracks: </strong>22
+      <a [routerLink]="['/album/' + album.id]">
+        <img
+          mat-card-image
+          class="album-cover"
+          src="{{ album.images[0].url }}"
+          alt="album art"
+        />
+      </a>
+      <strong>Release Date: </strong>{{ album.release_date }}<br />
+      <strong>Tracks: </strong>{{ album.total_tracks }}
     </mat-card>
   </div>
   <!-- -->
