Create a view for 404 webpage

--- a/Assignment 4/web422-a4/src/app/not-found/not-found.component.html
+++ b/Assignment 4/web422-a4/src/app/not-found/not-found.component.html
@@ -1,1 +1,9 @@
-<p>not-found works!</p>
+<div fxLayout="column" fxLayoutAlign="center center" style="height: 100vh">
+  <h1 class="not-found-404" [style.margin-bottom]="'0.6em'">404</h1>
+  <h2 class="not-found">Page Not Found!</h2>
+  <br />
+  <a href="/newReleases"><button mat-stroked-button>Home</button></a>
+</div>
+<!-- <div fxLayout="row" fxLayoutAlign="center center">
+  <p>not-found works!</p>
+</div> -->
