Add a class to "Seneca Music" h1

--- a/Assignment 4/web422-a4/src/app/app.component.html
+++ b/Assignment 4/web422-a4/src/app/app.component.html
@@ -6,7 +6,7 @@
     </button>
 
     <a class="navbar-brand" matTooltip="Home" [routerLink]="['/newReleases']">
-      <h1>Seneca Music</h1>
+      <h1 class="seneca-music">Seneca Music</h1>
     </a>
 
     <span class="navbar-spacer"></span>
