--- a/Assignment 4/web422-a4/src/styles.css
+++ b/Assignment 4/web422-a4/src/styles.css
@@ -7,7 +7,7 @@
 html, body { height: 100%; }
 body {
   margin: 0;
-  font-family: Montserrat, sans-serif !important;
+  font-family: 'Montserrat', sans-serif !important;
   font-size: 14px;
 }
 
@@ -122,4 +122,63 @@ mat-sidenav {
 
 .green-icon {
   color: green;
+}
+
+.artist-name, .new-releases, .about-header {
+  font-family: 'Montserrat', sans-serif !important;
+  font-weight: 700 !important;
+  font-size: 2.8em !important;
+}
+
+.seneca-music {
+  font-family: 'Montserrat', sans-serif !important;
+}
+
+.full-discography {
+  font-size: 2em !important;
+}
+
+hr {
+  background-color: rgb(212, 212, 212); 
+  height: 1px; 
+  border: 0;
+}
+
+.not-found-404 {
+  font-weight: 800 !important;
+  font-size: 8em !important;
+  color: rgb(226, 226, 226);
+}
+
+.not-found {
+  font-family: 'Montserrat', sans-serif !important;;
+  font-weight: 700 !important;
+  font-size: 2.7em !important;
+  color: rgb(167, 167, 167);
+}
+
+a button {
+  color: black !important;
+}
+
+.about-background {
+  background: url('./assets/about_cover.jpg') no-repeat center center;
+  min-height: 100vh;
+}
+
+.about h2 {
+  font-family: 'Montserrat', sans-serif !important;
+}
+
+
+  
+
+
+.about-alert {
+  font-family: 'Montserrat', sans-serif !important;
+  font-size: 1.4em;
+  padding: 1.3em;
+  background-color: rgb(226, 226, 226);;
+  text-align: center;
+  border-radius: 10px;
 }
