--- a/Assignment 5/web422-a5/src/styles.css
+++ b/Assignment 5/web422-a5/src/styles.css
@@ -182,3 +182,5 @@ a button {
   text-align: center;
   border-radius: 10px;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
