--- a/Assignment 5/web422-a5/src/app/not-found/not-found.component.html
+++ b/Assignment 5/web422-a5/src/app/not-found/not-found.component.html
@@ -2,7 +2,9 @@
   <h1 class="not-found-404" [style.margin-bottom]="'0.6em'">404</h1>
   <h2 class="not-found">Page Not Found!</h2>
   <br />
-  <a href="/newReleases"><button mat-stroked-button>Home</button></a>
+  <a [routerLink]="['/newReleases']"
+    ><button mat-stroked-button>Home</button></a
+  >
 </div>
 <!-- <div fxLayout="row" fxLayoutAlign="center center">
   <p>not-found works!</p>
