--- a/Assignment 5/web422-a5/src/app/album/album.component.html
+++ b/Assignment 5/web422-a5/src/app/album/album.component.html
@@ -1,6 +1,10 @@
 <div>
   <h1>{{ album.name }}</h1>
   <p>Full track listing for {{ album.name }}</p>
+  <p>
+    Click the <mat-icon mat-list-icon>queue_music</mat-icon> icon to
+    <strong>add</strong> a song from your favourites list
+  </p>
   <br />
 </div>
 
@@ -25,7 +29,7 @@
           aria-label="Artist selection"
           *ngFor="let artist of album.artists"
         >
-          <a [routerLink]="['/artist']">
+          <a [routerLink]="['/artist', artist.id]">
             <mat-chip>{{ artist.name }}</mat-chip>
           </a>
         </mat-chip-list>
@@ -50,12 +54,17 @@
 <mat-list>
   <!-- Single "Responsive" Material List Item-->
   <mat-list-item *ngFor="let item of album.tracks.items">
-    <mat-icon mat-list-icon>queue_music</mat-icon>
+    <mat-icon mat-list-icon (click)="addToFavourites(track.id)"
+      >queue_music</mat-icon
+    >
     <div mat-line>
       <mat-card>
         <mat-card-content
-          >{{ item.track_number }} {{ item.name }} 4 -
+          >{{ item.track_number }}: {{ item.name }} -
           {{ (item.duration_ms / 60000).toFixed(2) }}
+          <div *ngIf="item.preview_url">
+            <br /><audio controls [src]="item.preview_url"></audio>
+          </div>
           <!-- NOTE 3.34 was determined by using (duration_ms / 60000).toFixed(2) -->
         </mat-card-content>
       </mat-card>
