--- a/Assignment 5/web422-a5/src/app/album/album.component.html
+++ b/Assignment 5/web422-a5/src/app/album/album.component.html
@@ -54,7 +54,7 @@
 <mat-list>
   <!-- Single "Responsive" Material List Item-->
   <mat-list-item *ngFor="let item of album.tracks.items">
-    <mat-icon mat-list-icon (click)="addToFavourites(track.id)"
+    <mat-icon mat-list-icon (click)="addToFavourites(item.id)"
       >queue_music</mat-icon
     >
     <div mat-line>
