Change back routerLink to href for external links

--- a/Assignment 5/web422-a5/src/app/album/album.component.html
+++ b/Assignment 5/web422-a5/src/app/album/album.component.html
@@ -40,7 +40,7 @@
         </div>
         <br /><br />
         <div>
-          <a [routerLink]="[album.external_urls.spotify]" target="_blank">
+          <a href="{{ album.external_urls.spotify }}" target="_blank">
             <img src="../../assets/spotify-icon-png-15398.png" width="30px" />
           </a>
         </div>
