Change back routerLink to href for external links

--- a/Assignment 5/web422-a5/src/app/new-releases/new-releases.component.html
+++ b/Assignment 5/web422-a5/src/app/new-releases/new-releases.component.html
@@ -43,7 +43,7 @@
               </a> </mat-chip-list
             ><br />
             <strong>Listen on Spotify: </strong>
-            <a [routerLink]="[item.external_urls.spotify]" target="_blank">
+            <a href="{{ item.external_urls.spotify }}" target="_blank">
               <mat-icon
                 aria-hidden="false"
                 aria-label="Example home icon"
